Prepare to publish & fixes